<resources>
    <string name="app_name">Home page</string>
    <string name="blind_aid_app">Blind Aid App</string>
    <string name="john">John</string>
    <string name="search_elements">Search elements</string>
    <string name="bus_number">Bus Number</string>
    <string name="bus_number">Bus Number</string>
    <string name="bus_track">Bus Track</string>
    <string name="auto_message">Auto Message</string>
    <string name="about_us">About Us</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="account">Account</string>
</resources>